--- a/HW2/part1/Makefile
+++ b/HW2/part1/Makefile
@@ -1,6 +1,6 @@
 TARGET := pi.out
 CXX = g++ -m64
-CXXFLAGS = -O3 -mavx -std=c++17 -Wall -pthread
+CXXFLAGS = -O3 -std=c++17 -Wall -pthread
 
 all: pi.cpp
 	$(CXX) $(CXXFLAGS) pi.cpp -o $(TARGET)
